# FormulaSnap

./: .gitattributes  .gitignore  .pre-commit-config.yaml  AGENTS.md  LICENSE  README.md  eslint.config.js  index.html  package.json  pnpm-lock.yaml  pytest.ini  skills-lock.json  tsconfig.node.tsbuildinfo  vite.config.ts  vitest.config.ts
.github/: dependabot.yml
.github/workflows/: ci-cd.yml  ci.yml  dry-run-release.yml  release.yml
.omo/: boulder.json
.omo/evidence/: task-1-pyinstaller-spec-validation.txt  task-10-doc-completeness.txt  task-2-version-sync.txt  task-3-cargo-check.txt  task-4-key-generation.txt  task-5-build-script-check.txt  task-6-config-validation.txt  task-7-updater-functions.txt  task-8-permissions-check.txt  task-9-workflow-syntax.txt
.omo/plans/: fix-ci.md  fix-plan.md  windows-macos-packaging.md
.omo/run-continuation/: ses_18ce341cbffeqIumvg35XChkue.json  ses_18cfed002ffekSJf2vUFg6nhJD.json  ses_18d3d3a3cffeH8JZnHXU2r6dud.json  ses_18da10b10ffepoB8644WY9xVMK.json  ses_18dc8caeaffe0M1jlBDqLsbF1q.json  ses_18e49a22cffeACCMiAwJu5j7qf.json  ses_18e73cc1affeWVRRKH73IQpLZn.json  ses_1905a875fffeeiYDmQzP6tMD5x.json  ses_1906a8034ffetl6BFBRJ0ImydR.json  ses_1906b0afcffeFgYRZrXJRIBTIv.json  ses_190955a52ffesToJlilfms0qQb.json
docs/: BUILDING.md
scripts/: sync-version.js
sidecar/: build.bat  build.sh  pyinstaller.spec  pyproject.toml
sidecar-rust/: Cargo.toml
sidecar-rust/src/: cache.rs  cost_tracker.rs  key_manager.rs  logging.rs  main.rs  response_parser.rs  types.rs
sidecar-rust/src/api/: mod.rs  routes.rs
sidecar-rust/src/engines/: claude.rs  mod.rs  openai.rs
sidecar/sidecar/: AGENTS.md  __init__.py  cache.py  logging_config.py  main.py  runtime_hook.py
sidecar/sidecar/api/: server.py
sidecar/sidecar/ocr_engines/: AGENTS.md  __init__.py  claude_engine.py  cost_tracker.py  gemini_engine.py  image_utils.py  interface.py  key_manager.py  llm_base.py  manager.py  mathpix_engine.py  openai_engine.py  pix2text_engine.py  response_parser.py
sidecar/tests/: AGENTS.md  __init__.py  test_cache.py  test_claude.py  test_concurrent_ocr.py  test_cost_tracker.py  test_framework.py  test_gemini.py  test_health.py  test_image_utils.py  test_interface.py  test_key_manager.py  test_lazy_engine_loading.py  test_llm_base.py  test_logging_config.py  test_main.py  test_manager.py  test_mathpix.py  test_openai.py  test_pix2text.py  test_response_parser.py  test_server.py
src/: AGENTS.md  App.css  App.tsx  main.tsx
src-tauri/: Cargo.toml  build.rs  tauri.conf.json  windows-app-manifest.xml
src-tauri/capabilities/: default.json  selection.json
src-tauri/src/: AGENTS.md  db.rs  history.rs  hotkey.rs  lib.rs  logger.rs  permissions.rs  screenshot.rs  sidecar.rs  tray.rs
src/__tests__/: AboutSection.test.tsx  ApiKeySection.test.tsx  App.test.tsx  CaptureActions.test.tsx  CaptureFlow.test.tsx  CapturePreview.test.tsx  ErrorBoundary.test.tsx  FormulaPreview.test.tsx  Header.test.tsx  HistoryDetailPage.test.tsx  HistoryPage.test.tsx  HomePage.test.tsx  OcrResultDisplay.test.tsx  PreferencesSection.test.tsx  RegionSelector.test.tsx  Section.test.tsx  SelectionPage.test.tsx  SettingsPage.test.tsx  Spinner.test.tsx  StatsSection.test.tsx  StatusBar.test.tsx  Toast.test.tsx  confidence.test.ts  constants.test.ts  i18n.test.ts  settings.test.ts  sidecarClient.test.ts  sidecarError.test.ts  theme.test.ts
src/components/: BackendIndicator.tsx  CaptureFlow.tsx  CostConfirmDialog.tsx  ErrorBoundary.tsx  FormulaPreview.tsx  (+6 more)
(+47 files in other folders)
