[package]
name = "sidecar-rust"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7"
tokio = { version = "1.0", features = ["full"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.12", features = ["json", "multipart"] }
tracing = "0.1"
tracing-subscriber = "0.3"
tracing-appender = "0.2"
sha2 = "0.10"
image = "0.25"
lru = "0.12"
regex = "1.0"
base64 = "0.22"
chrono = "0.4"
thiserror = "1.0"
async-trait = "0.1"
dotenvy = "0.15"
dirs = "5"

[dev-dependencies]
tempfile = "3"