[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "formulasnap-sidecar"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "pix2text>=1.1",
    "fastapi>=0.100",
    "uvicorn[standard]>=0.23",
    "onnxruntime>=1.16",
    "httpx>=0.24",
    "pydantic>=2.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.0", "pytest-asyncio>=0.21", "httpx"]

[project.scripts]
formulasnap-sidecar = "sidecar.main:main"

[tool.hatch.build.targets.wheel]
packages = ["sidecar"]
