[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "formulasnap-sidecar"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.100",
    "uvicorn[standard]>=0.23",
    "httpx>=0.24",
    "pydantic>=2.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.0", "pytest-asyncio>=0.21", "httpx", "pytest-timeout>=2.0"]
pix2text = ["pix2text>=1.1", "onnxruntime>=1.16"]
claude = ["anthropic>=0.40"]
openai = ["openai>=1.0"]
genai = ["google-genai>=1.0"]

[project.scripts]
formulasnap-sidecar = "sidecar.main:main"

[tool.hatch.build.targets.wheel]
packages = ["sidecar"]
