[package]
name = "tauri-app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "tauri_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }


[dependencies]
tauri = { version = "2", features = ["tray-icon", "macos-private-api"] }
tauri-plugin-shell = "2"
tauri-plugin-global-shortcut = "2"
tauri-plugin-clipboard-manager = "2"
tauri-plugin-process = "2"
tauri-plugin-dialog = "2"
xcap = "0.9.6"
image = "0.25"
png = "0.17"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.31", features = ["bundled", "modern_sqlite"] }
base64 = "0.22"
reqwest = { version = "0.12", features = ["blocking", "json"] }
tokio = { version = "1", features = ["time"] }
log = { version = "0.4", features = ["std"] }
chrono = "0.4"

[target.'cfg(any(target_os = "macos", target_os = "windows"))'.dependencies]
tauri-plugin-updater = "2"

[profile.release]
opt-level = "z"      # 优先体积
lto = "thin"         # 链接时优化（使用 thin 而非 true，平衡效果和编译时间）
codegen-units = 1    # 提升优化效果
strip = true         # 剥离符号
panic = "abort"      # 避免 unwind 表；注意：panic 会直接终止进程，sidecar 子线程 panic 也会导致主进程退出

